
    WATO:
    * 4142 New extended search dialog for rulesets and rules...
    * 4217 WATO rules can now be moved via drag&drop...
    * 4227 New manual WATO configuration lock mechanism...
    * 4018 WATO WebAPI: new functions to manage host, service and contactgroups...
    * 4319 Reworked the service discovery dialog...
    * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery
    * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
    * 4218 FIX: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
    * 4221 FIX: Fixed "analyse parameters" page for services with umlauts in names
    * 4222 FIX: Services of host page: Fixed encoding issue for hosts with umlauts in alias
    * 4223 FIX: Fixed possible g_host_attribute related AttributeError exception
    * 4224 FIX: Improved exception handling during WATO slave site activation
    * 4237 FIX: Fixed rendering of old timestamps...
    * 4231 FIX: Fixed broken host renaming when files are in var/check_mk/web
    * 4317 FIX: Rule list: Removed the row limit of the rule tables
    * 4318 FIX: Rule editor: Fixed wrong default value for yes/no rulesets

    Notifications:
    * 4197 FIX: Fix sending notification to global fallback email address
    * 4284 FIX: Nagios: Added missing variable MICROTIME to notification contexts...

    BI:
    * 4202 FIX: Availability now avoids pending states for times before new hosts or services were added...
    * 4009 FIX: Business intelligence: Multihost aggregations are no longer broken after a core restart

    Reporting & Availability:
    * 3652 FIX: Unbreak PDF exports...
    * 4267 FIX: PDF export of filtered alert statistics view was always empty

    Event Console:
    * 4154 Do not send notifications if host found and currently in downtime...
            NOTE: Please refer to the migration notes!