@@ -120,6 +120,7 @@
     * 4227 New manual WATO configuration lock mechanism...
     * 4018 WATO WebAPI: new functions to manage host, service and contactgroups...
     * 4319 Reworked the service discovery dialog...
+    * 4320 Distributed: Master site has now also site specific global settings...
     * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery
     * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
     * 4218 FIX: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
